force-app/main/default/objects/CSBD_Log_Acceso_MIFID__c/CSBD_Log_Acceso_MIFID__c.object-meta.xml
<CustomObject>
    <description>Registro de accesos a las grabaciones de llamadas relacionadas con productos MIFID.</description>
    <label>Log Acceso MIFID</label>
    <nameField>
        <displayFormat>MIFID-{0000000000}</displayFormat>
        <label>Número de Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs Acceso MIFID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>