force-app/main/default/objects/CSBD_Log_Acceso_MIFID__c/fields/CSBD_Fecha_Acceso__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Fecha_Acceso__c</fullName>
    <description>Fecha y hora en que se accedió a la grabación</description>
    <label>Fecha de Acceso</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>