force-app/main/default/objects/CSBD_Log_Acceso_MIFID__c/fields/CSBD_Llamada__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Llamada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Llamada a la que se accedió</description>
    <label>Llamada</label>
    <referenceTo>CC_Llamada__c</referenceTo>
    <relationshipLabel>Logs Acceso MIFID</relationshipLabel>
    <relationshipName>Logs_Acceso_MIFID</relationshipName>
    <type>Lookup</type>
</CustomField>