force-app/main/default/objects/CSBD_Log_Acceso_MIFID__c/fields/CSBD_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad relacionada con la grabación</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Logs Acceso MIFID</relationshipLabel>
    <relationshipName>Logs_Acceso_MIFID</relationshipName>
    <type>Lookup</type>
</CustomField>